--- a/ui/package.json
+++ b/ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shopping-assistant",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "version": "0.0.1",
+  "main": "src/index.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -14,27 +14,47 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@mediapipe/pose": "^0.5.1675469404",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@tensorflow-models/mobilenet": "^2.1.0",
+    "@tensorflow-models/pose-detection": "^2.0.0",
+    "@tensorflow/tfjs": "^3.7.0",
+    "@tensorflow/tfjs-react-native": "^0.8.0",
     "expo": "~47.0.12",
     "expo-asset": "~8.7.0",
+    "expo-av": "~13.0.2",
+    "expo-barcode-scanner": "~12.1.0",
+    "expo-camera": "~13.1.0",
     "expo-constants": "~14.0.2",
     "expo-font": "~11.0.1",
+    "expo-gl": "~12.0.1",
+    "expo-gl-cpp": "^11.4.0",
+    "expo-haptics": "~12.0.1",
     "expo-linking": "~3.3.0",
+    "expo-speech": "~11.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "~2.0.1",
+    "expo-three": "^7.0.0",
+    "expo-updates": "~0.15.6",
     "expo-web-browser": "~12.0.0",
+    "jsdom-jscore-rn": "^0.1.8",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.18.9",
+    "three": "^0.149.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/jsdom": "^21.1.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "jest": "^26.6.3",
